# adaptive-manifest-schema

./: .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  AGENT_CONDUCT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  DECISIONS.md  MANIFEST.toml  README.md  SKILL.md  manifest-schema.toml  pyproject.toml  shape.ps1  zensical.toml
.github/workflows/: ci-python-zensical.yml  deploy-zensical.yml  pre-release.yml  release-pypi.yml
docs/: index.md
docs/en/: api.md  evolution.md  glossary.md  index.md  scaffold.md
schema/: manifest-1.toml
src/adaptive_manifest_schema/: __init__.py  __main__.py  cli.py  load.py  orchestrate.py  sync.py  validate_contract.py  validate_manifest.py  validate_schema.py
src/adaptive_manifest_schema/commands/: __init__.py  sync_version.py  validate.py  validate_schema.py
src/adaptive_manifest_schema/types/: __init__.py  manifest_schema.py  primitives.py
tests/: test_cli.py  test_load.py  test_sync.py  test_validate_contract.py  test_validate_manifest.py  test_validate_schema.py
tests/commands/: test_validate.py  test_validate_schema.py
